--- a/systemtarjeta/Gemfile
+++ b/systemtarjeta/Gemfile
@@ -28,6 +28,7 @@ gem 'bootstrap-sass', '~> 3.2.0'
 gem 'autoprefixer-rails'
 # Use Unicorn as the app server
 # gem 'unicorn'
+gem 'devise'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
