Sin filtro todavia

--- a/systemtarjeta/Gemfile
+++ b/systemtarjeta/Gemfile
@@ -29,6 +29,7 @@ gem 'autoprefixer-rails'
 # Use Unicorn as the app server
 # gem 'unicorn'
 gem 'devise'
+gem 'ransack'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
